# aircraft-turnaround-tracker

./: .dockerignore  .gitignore  Dockerfile  README.md  app.py  pyproject.toml
notebooks/: poc_video_exploration.ipynb
src/: __init__.py  etl.py  model.py  tracker.py  utils.py
tests/: conftest.py  test_etl.py  test_tracker.py  test_utils.py
