[project]
name = "aircraft-turnaround-tracker"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=7.3.0",
    "jupyter>=1.1.1",
    "matplotlib>=3.11.0",
    "opencv-python>=4.13.0.92",
    "pandas>=3.0.3",
    "streamlit>=1.58.0",
    "torch<=2.6.0",
    "torchvision>=0.21.0",
    "tqdm>=4.66.5",
]

[[tool.uv.index]]
url = "https://download.pytorch.org/whl/cu124"
